--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -4,16 +4,17 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-md-auto align-items-center">
         <li>
           <%= link_to "検索", "#", class: "btn btn-primary" %>
         </li>
         <li>
-          <%= link_to "マイページ", "#", class: "btn btn-primary" %>
+          <%= link_to "マイページ", "/users/#{current_user.id}", class: "btn btn-primary" %>
         </li>
         <li>
-          <%= link_to "top", "#", class: "btn btn-primary" %>
+          <%= link_to "top", root_path, class: "btn btn-primary" %>
         </li>
         <li>
           <%= link_to "ログアウト", "#", class: "btn btn-primary" %>
@@ -23,5 +24,6 @@
         </li>
       </ul>
     </div>
+
   </div>
 </nav>
